# blixt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: audit.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  clippy-sarif.yml  pages.yml
crates/blixt/: Cargo.toml
crates/blixt-cli/: Cargo.toml
crates/blixt-cli/src/: fields.rs  main.rs  tailwind.rs  test_helpers.rs  validate.rs
crates/blixt-cli/src/commands/: build.rs  db.rs  dev.rs  fs_utils.rs  generate.rs  generate_auth.rs  generate_docker.rs  mod.rs  new.rs
crates/blixt-cli/tests/: e2e.rs
crates/blixt-cli/tests/e2e/: generate.rs
crates/blixt/src/: app.rs  config.rs  context.rs  db.rs  error.rs  flash.rs  form.rs  health.rs  jobs.rs  lib.rs  logging.rs  mailer.rs  paginate.rs  redact.rs  storage.rs  test_helpers.rs  testing.rs  upload.rs  validate.rs
crates/blixt/src/auth/: cookie.rs  extractor.rs  jwt.rs  mod.rs  password.rs
crates/blixt/src/cache/: memory.rs  mod.rs  redis.rs
crates/blixt/src/datastar/: hmr.rs  mod.rs  responses.rs  signals.rs  signals_builder.rs  sse_response.rs
crates/blixt/src/db/: builder.rs  macros.rs  mod.rs  postgres.rs  relation.rs  sqlite.rs
crates/blixt/src/jobs/: migration.rs  mod.rs
crates/blixt/src/middleware/: csrf.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
examples/hello/: .env.example  Cargo.toml
examples/hello/src/: main.rs
examples/hello/src/controllers/: api.rs  home.rs
examples/hello/static/css/: app.css
examples/hello/templates/: hello.html
examples/hello/templates/fragments/: status.html  time.html
examples/hello/templates/layouts/: app.html
examples/hello/templates/pages/: home.html
examples/todo/: .env.example  .gitignore  Cargo.toml
examples/todo/migrations/: 001_create_todos.sql
examples/todo/src/: main.rs
examples/todo/static/css/: style.css
examples/todo/templates/: index.html  layout.html
examples/todo/templates/fragments/: todo_item.html  todo_list.html
examples/todo/templates/pages/: home.html
website/: config.toml
website/content/docs/: _index.md
website/content/docs/getting-started/: _index.md  installation.md  scaffold.md  your-first-app.md
website/content/docs/guides/: _index.md  authentication.md  background-jobs.md  caching.md  database.md  datastar.md  deployment.md  email.md  error-handling.md  file-storage.md  file-uploads.md  flash-messages.md  forms.md  middleware.md  query-builder.md  routing.md  templates.md  testing.md  validation.md
website/content/docs/reference/: _index.md  cli.md  configuration.md
website/templates/: base.html  index.html  page.html  section.html
