[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["examples/hello", "examples/todo"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ripkitten-co/blixt"
homepage = "https://github.com/ripkitten-co/blixt"
rust-version = "1.85"
description = "A lightning-fast Rust web framework with compile-time safety and zero JavaScript build steps"

[workspace.dependencies]
# HTTP & async
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "trace", "set-header"] }

# Templates (compile-time)
askama = "0.15"

# Database (compile-time checked SQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "migrate", "chrono", "uuid"] }

# Streams (async trait)
futures-core = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Security
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# File watching (dev server)
notify = "8"

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
indicatif = "0.18"
reqwest = { version = "0.13", features = ["stream"] }
