[package]
name = "blixt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Blixt CLI — project scaffolding, code generation, dev server, and build tools"
documentation = "https://docs.rs/blixt-cli"
readme = "../../README.md"
keywords = ["web-framework", "cli", "scaffolding", "code-generation", "rust"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "blixt"
path = "src/main.rs"

[dependencies]
blixt = { version = "0.4.0", path = "../blixt" }
clap.workspace = true
tokio.workspace = true
console.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
regex.workspace = true
sha2.workspace = true
dirs.workspace = true
chrono.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "sqlite", "migrate", "any"] }
dotenvy.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile = "3"
