[package]
name = "blixt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Blixt core framework — compile-time templates, type-safe SQL, Datastar SSE integration"
documentation = "https://docs.rs/blixt"
readme = "../../README.md"
keywords = ["web-framework", "axum", "sse", "datastar", "askama"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
axum.workspace = true
futures-core.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
askama.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
lettre.workspace = true
notify.workspace = true
regex.workspace = true
secrecy = { version = "0.10.3", features = ["serde"] }
uuid = { version = "1.23.0", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
