[package]
name = "blixt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Blixt core framework — compile-time templates, type-safe SQL, Datastar SSE integration"
documentation = "https://docs.rs/blixt"
readme = "../../README.md"
keywords = ["web-framework", "axum", "sse", "datastar", "askama"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
axum.workspace = true
futures-core.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
askama.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
lettre.workspace = true
notify.workspace = true
regex.workspace = true
secrecy.workspace = true
uuid.workspace = true
urlencoding.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
async-trait.workspace = true
moka.workspace = true
deadpool-redis = { workspace = true, optional = true }
opendal = { workspace = true, features = ["services-fs"] }
bytes.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
redis = ["deadpool-redis"]
s3 = ["opendal/services-s3"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
