[package]
name = "hello"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
blixt = { path = "../../crates/blixt", default-features = false, features = ["sqlite"] }
askama = "0.15"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
