[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15"
axum = { version = "0.8", features = ["macros"] }
blixt = { path = "../../crates/blixt", default-features = false, features = ["sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
