[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15"
blixt = { path = "../../crates/blixt", default-features = false, features = ["sqlite"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["full"] }
